# SCC-StabilizedRK

./: .gitignore  ArrayStructure1D.h  ArrayStructure2D.h  CMakeLists.txt  ClassicRK.h  DynamicVectorArray.h  GenEigUtility.cpp  GenEigUtility.h  PowerEigEstimator.h  PprimeCondition.h  README.md  RKEigEstimator.h  RKStabilityPolynomialEvaluator.cpp  RKStabilityPolynomialEvaluator.h  RKeigStepEstimator.h  RKpolynomialFunction.h  RKsteadyState.h  RKsteadyStateCoeff.cpp  RKsteadyStateCoeff.h  RKsteadyStateEE.h  RKsteadyStateFixedStepEE.h  SRKtimestepEstimator.h  SVDutility.cpp  SVDutility.h  StabilizedRK.h  StabilizedRKconstants.h  rkf45.h
